kube-5/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - boiarnikov-a-hw7.mfti.devops-teta.ru
      secretName: tls-cert-le
  rules:
    - host: boiarnikov-a-hw7.mfti.devops-teta.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
